# QueenAI_strongerAI

./: .gitignore  ACV_23_Part2.ipynb  README.md  main.py  test.py
classify_video/: README.md  fitness_poses_csvs_out.csv  pyproject.toml  train.py
classify_video/classify_video/: class_poseclassifier.py  main.py
classify_video/tests/: test.py
