[tool.poetry]
name = "classify-video"
version = "0.1.0"
description = ""
authors = ["irina-piazza <irina.piazza@le-campus-numerique.fr>"]
readme = "README.md"
#packages = [{include = "class_app"}]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^9.4.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
tqdm = "^4.65.0"
requests = "^2.28.2"
mediapipe = "^0.9.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
classify = 'classify_video.main:main'
